// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookList component renders a BookListItem by default 1`] = `
<div
  className="book-list-item"
>
  <div
    className="book-list-img-container"
  >
    <span />
  </div>
  <div
    className="book-info"
  >
    <Link
      to="/book/undefined"
    >
      <h3 />
    </Link>
    <div
      className="authors-container"
    >
      no authors!
    </div>
    <p />
    <p />
  </div>
  <div
    className="ratings-container"
  >
    <p />
    <p>
      Based on 
       reviews
    </p>
  </div>
</div>
`;

exports[`BookList component renders the BookListItem given props 1`] = `
<div
  className="book-list-item"
>
  <div
    className="book-list-img-container"
  >
    <span />
  </div>
  <div
    className="book-info"
  >
    <Link
      to="/book/undefined"
    >
      <h3 />
    </Link>
    <div
      className="authors-container"
    >
      <RenderAuthors
        authors={
          Array [
            Object {
              "first_name": "Suzie",
              "last_name": "Violin",
            },
            Object {
              "first_name": "Will",
              "last_name": "Superstar",
            },
          ]
        }
      />
    </div>
    <p />
    <p />
  </div>
  <div
    className="ratings-container"
  >
    <p />
    <p>
      Based on 
       reviews
    </p>
  </div>
</div>
`;
